--- a/src/main/resources/errorCode.properties
+++ b/src/main/resources/errorCode.properties
@@ -1,3 +1,18 @@
 -A1 = \u670D\u52A1\u5668\u7E41\u5FD9
 -A2 = \u65E0\u6548\u7684\u53C2\u6570{0}
+
+#Project
 A100 = \u4FDD\u5B58\u9879\u76EE\u5931\u8D25
+A101 = \u66F4\u65B0\u9879\u76EE\\u5931\u8D25
+A102 = \u5220\u9664\u9879\u76EE\u5931\u8D25
+A103 = \u9879\u76EE\u540D\u79F0\u4E0D\u80FD\u4E3A\u7A7A
+A104 = \u9879\u76EE\u540D\u79F0\u5DF2\u5B58\u5728
+
+
+#Host
+A200 = \u6DFB\u52A0\u4E3B\u673A\u5931\u8D25
+A201 = \u66F4\u65B0\u4E3B\u673A\u5931\u8D25
+A202 = \u5220\u9664\u4E3B\u673A\u5931\u8D25
+A203 = \u4E3B\u673A\u7F16\u53F7\u4E0D\u80FD\u4E3A\u7A7A
+A204 = \u4E3B\u673A\u7F16\u53F7\u5DF2\u5B58\u5728
+A205 = \u6B64\u9879\u76EE\u5DF2\u6709\u4E3B\u673A
