1.Add exception catch 2. Record url params and taking time

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -105,7 +105,7 @@
 	<!-- 配置springMVC -->
 	<servlet>
 		<servlet-name>springMVC</servlet-name>
-		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+		<servlet-class>com.rest.yun.servlet.YunDispatcherServlet</servlet-class>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
 			<param-value>classpath:springMVC.xml</param-value>
