--- a/pom.xml
+++ b/pom.xml
@@ -174,6 +174,13 @@
 			<scope>system</scope>
 			<systemPath>${basedir}/lib/gexin-rp-sdk-template-2.0.0.6.jar</systemPath>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.mobile</groupId>
+			<artifactId>spring-mobile-device</artifactId>
+			<version>1.1.2.RELEASE</version>
+		</dependency>
+		
 	</dependencies>
 
 	<!-- 配置tomcat热部署，注意需要更改maven安装路劲下的setting文件，以及配置tomcat权限 -->
